[package]
name = "location2mqtt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["cookies"] }
regex = "1.7"
tokio = { version = "1.27", features = ["full"] }
rumqttc = { version = "0.20.0", features = ["use-native-tls", "url"] }
async-recursion = "1.0"
async-trait = "0.1"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
